Move Romanian Civil War event to World News

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -478,6 +478,14 @@ worldnews.64.b:0 "Let us hope their isolation makes them less of a threat to us.
 worldnews.64.c:0 "Another opportunity missed. We need every opportunity we can get!"
 worldnews.64.e:0 "We finally rule unchallenged. It is time for the Apartheid and the Republic."
 
+worldnews.65.t:0 "The Romanian Civil War"
+worldnews.65.d:0 "After the disastrous defeat in the Weltkrieg, the days of the Romanian monarchy were counted. After the death of King Ferdinant I in 1927, the crown went to his grandson Michael, who was soon forced to abdicate and was replaced by a military dictatorship. This autocracy was soon replaced by the nigh-totalitarian rule of the Iron Guard. However, many people in Romania, most notably intellectuals, remained sympathetic to the monarchists, especially Ferdinand I's disgraced son, Carol. \n\nA group of pro-monarchist officers have defected and seized control of Bessarabia and Moldavia as a stage of operations for a monarchist restoration in the country. Romania now falls into bloody civil war, and who knows what how it will end..."
+worldnews.65.a:0 "The Bucharest Circle will regret this attack on the Romanian people."
+worldnews.65.b:0 "Trăiască Regele! Long live King Carol! We will defeat the populists!"
+worldnews.65.c:0 "Whoever wins, this is bound to weaken the odds of a Greater Romania."
+worldnews.65.e:0 "This should set Romania back enough for them to not be a threat."
+worldnews.65.f:0 "With Romania ablaze, the Balkans inch ever closer to the brink."
+
 ### City Fall Events ###
 
 worldnews.250.t:0 "-"
