Why does Brazil have to be so massive, also i still have to redistribute the means of production

--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -298,7 +298,7 @@ STATE_295:0 "Friedrichstadt"
 STATE_296:0 "Portuguese Guinea"
 STATE_297:0 "Equatorial Guinea"
 STATE_298:0 "Liberia"
-STATE_299:0 "Falkland Islands"
+STATE_299:0 "Islas Malvinas"
 STATE_300:0 "Uruguay"
 STATE_301:0 "Paraguay"
 STATE_302:0 "La Paz"
@@ -494,15 +494,15 @@ STATE_491:0 "Loreto"
 STATE_492:0 "Arequipa"
 STATE_493:0 "Caribe"
 STATE_494:0 "Cuzco"
-STATE_495:0 "Amazonas & Pará"
+STATE_495:0 "Amazonas"
 STATE_496:0 "Minas Gerais"
-STATE_497:0 "Maranhao & Piaui"
+STATE_497:0 "Piaui"
 STATE_498:0 "Nordeste"
 STATE_499:0 "Bahia"
 STATE_500:0 "Rio de Janeiro"
 STATE_501:0 "São Paulo"
 STATE_502:0 "Rio Grande Sul"
-STATE_503:0 "Santa Catarina & Paraná"
+STATE_503:0 "Paraná"
 STATE_504:0 "Campo Grande"
 STATE_505:0 "Goias"
 STATE_506:0 "Antofagasta"
@@ -719,7 +719,7 @@ STATE_716:0 "Fengtian"
 STATE_717:0 "Hejiang"
 STATE_718:0 "Moltkestadt"
 STATE_719:0 "Natal"
-STATE_720:0 "South Georgia"
+STATE_720:0 "Isla San Pedro"
 STATE_721:0 "Portuguese Timor"
 STATE_722:0 "Petsamo"
 STATE_723:0 "South Island"
@@ -893,3 +893,10 @@ STATE_890:0 "Shimla"
 STATE_891:0 "Lahore"
 STATE_892:0 "Jubaland"
 STATE_893:0 "Nagpur"
+STATE_894:0 "Santa Catarina"
+STATE_895:0 "Espírito Santo"
+STATE_896:0 "Maranhão"
+STATE_897:0 "Amapá"
+STATE_898:0 "Pará"
+STATE_899:0 "Roraima"
+STATE_900:0 "Rondônia"
