tweaks to the US factions

--- a/localisation/KR_New_England_l_english.yml
+++ b/localisation/KR_New_England_l_english.yml
@@ -280,3 +280,8 @@ neeflavor.25.c:0 "New Englanders are now Canadians!"
 neeflavor.30.t:0 "The Constitution of New England"
 neeflavor.30.d:0 "At the Hartford convention after much deliberation the delegates have signed the New England Constitution. This sets out the framework of our new Nation. While it is based on the American Model, we have also taken inspiration from our Canadian Allies. This is a momentous day. Long Live the New England Commonwealth!"
 neeflavor.30.a:0 "Nowhere does liberty appear in a more gracious form"
+
+neeflavor.31.t:0 "Road intergration with Canada?"
+neeflavor.31.d:0 "As we work on build up our economy, the question of which direction we should drive on. While the custom is to drive on the right, since the british revolution in 1925 Canada has driven on the left. Some political leaders have suggested that we switch to driving on the Left and better integrate our road network with the Canadians others of course wish to stay driving on the right. "
+neeflavor.31.a:0 "Switch to Driving on the Left"
+neeflavor.31.b:0 "Switch to Driving on the Right"
