--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -1094,6 +1094,12 @@ ustates.138.t:0 "Reed Walks Out of the Meeting"
 ustates.138.d:0 "Curtis' attempts to keep both the men in the meeting had made some headway when some of Long's men attacked a CSA worker. The city erupted in protest and Reed walked away from the table. Reed praised the president for his efforts but he could not deal with Long. As he left the meeting armed groups of CSA militia men began attacking the America First parties and Long was forced to retreat from the city."
 ustates.138.a:0 "Damn Long and his goons!"
 
+ustates.139.t:0 "The Fair Deal"
+ustates.139.d:0 "With the political crisis now averted, the Fair Deal can now be properly implemented. The fair deal was a brain child of a number of the more progressive members of the Republican party most prominently Quentin Roosevelt who coined the term Fair Deal as a deliberate call back to the Square Deal of his father, Theodore Roosevelt. The Fair Deal calls for strong government involvement to help restore the economy and society. With the Fair deal being implemented it has made the progressive wing of the Republican party the dominate faction of the party."
+ustates.139.a:0 "A deal that is Fair and Square!"
+
+
+
 ustates.140.t:0 "Valentine's Day Explosion"
 ustates.140.d:0 "The ship, Edgar Williams, exploded in the New York docks only minutes after entering it. An investigation showed that it contained a large amount of explosives going to an unknown location. Some in the government think it is a plot by European Syndicalists to smuggle weapons to the CSA."
 ustates.140.a:0 "Disastrous!"
