End of WK was in 1921, not 1919

--- a/localisation/KR_General_l_english.yml
+++ b/localisation/KR_General_l_english.yml
@@ -547,13 +547,13 @@ independent_war_desc:0 "This country is currently in a independent war. It does 
 
 ### Generic Focuses ###
 generic_army_effort:0 "Modern Warfare"
-generic_army_effort_desc:0 "The Weltkrieg, from its start to its end, changed warfare forever, finally ending Napoleonic Warfare's grasp on military thought and confirming the extreme deadliness of the rifle, machine gun and artillery cannon. Our army must adapt or perish, in a literal sense."
+generic_army_effort_desc:0 "The Weltkrieg, from its start to its end, changed warfare forever by finally ending Napoleonic Warfare's grasp on military thought and confirming the extreme deadliness of the rifle, machine gun and artillery cannon. Our army must adapt or perish, in a literal sense."
 generic_equipment_effort:0 "Equipment Modernisation"
 generic_equipment_effort_desc:0 "For a long time, military breakthroughs were slow, and having a good bolt-action rifle was enough. However, these rifles of the 19th Century are completely out of place on post-Weltkrieg battlefield. We must stop being complacent and get new equipment."
 generic_motorization_effort:0 "Army Motorisation"
 generic_motorization_effort_desc:0 "The cavalry charges of the Weltkrieg were probably the last. The truck is no longer just a transport tool and rapidly integrates to mobile warfare tactics. We must shake off outdated thinking and use motorisation to speed up our offensives and reinforcements."
 generic_doctrine_effort:0 "Studying the Weltkrieg"
-generic_doctrine_effort_desc:0 "We know about the Weltkrieg, but what have we learned from it? In just five years of conflict, countless soldiers died to teach us the new dynamics of warfare. If we do not learn about them, then our soldiers will meet the same fate on the battlefield."
+generic_doctrine_effort_desc:0 "We know about the Weltkrieg, but what have we learned from it? In just seven years of conflict, countless soldiers died to teach us the new dynamics of warfare. If we do not learn about them, then our soldiers will meet the same fate on the battlefield."
 generic_equipment_effort_2:0 "Equipment Research"
 generic_equipment_effort_2_desc:0 "We might have caught up to modern equipment, but new designs are already making ours obsolete. Regardless, we must persevere, and make sure that we never fall a single year behind in equipment. This means we will have to start developing our own designs."
 generic_mechanization_effort:0 "Mechanised Warfare"
