Added another city capture event, moved Ethopia CW

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -486,6 +486,11 @@ worldnews.65.c:0 "Whoever wins, this is bound to weaken the odds of a Greater Ro
 worldnews.65.e:0 "This should set Romania back enough for them to not be a threat."
 worldnews.65.f:0 "With Romania ablaze, the Balkans inch ever closer to the brink."
 
+worldnews.66.t:0 "Civil War in Ethiopia"
+worldnews.66.d:0 "Civil war has erupted in Ethiopia after Haile Selassie I's refusal to back down over his industry reforms. The nobility have taken up arms against the Negus Negast, seeking to take over the country by force. Only time will tell if they can succeed."
+worldnews.66.a:0 "The land of Solomon succumbs to internal strife, too."
+worldnews.66.b:0 "We will see those cowardly traitors through."
+
 ### City Fall Events ###
 
 worldnews.250.t:0 "-"
@@ -537,12 +542,13 @@ worldnews.256.c:0 "With such a victory on the Reactionary traitors, the Syndicat
 worldnews.256.e:0 "This is extremely concerning. We need to intervene soon, or else."
 worldnews.256.f:0 "Atlanta will descend into anarchy with those Syndicate militias rampaging through it."
 
-### Ethiopian Civil War ###
-
-worldnews.257.t:0 "Civil War in Ethiopia"
-worldnews.257.d:0 "Civil war has erupted in Ethiopia after Haile Selassie I's refusal to back down over his industry reforms. The nobility have taken up arms against the Negus Negast, seeking to take over the country by force. Only time will tell if they can succeed."
-worldnews.257.a:0 "The land of Solomon succumbs to internal strife, too."
-worldnews.257.b:0 "We will see those cowardly traitors through."
+worldnews.257.t:0 "The Fall of Atlanta" #US
+worldnews.257.d:0 "The United States military has been pushing towards the American Union State's temporary capital of Atlanta for a while now.\n\nReports are now coming in of Atlanta's capture by advancing US troops. Long's current whereabouts are unknown, but it is believed that he was rapidly evacuated to the countryside.\n\nReports indicate that military police has begun rounding up Union representatives and Minutemen. Is this the end of the Reactionary uprising in America?"
+worldnews.257.a:0 "You will never defeat the Minutemen of the Founding Fathers!"
+worldnews.257.b:0 "We are on your tail, Long. You will be tried for your crimes, you and your militia!"
+worldnews.257.c:0 "With such a victory on the Reactionary traitors, the federal troops will soon be upon us."
+worldnews.257.e:0 "With Long and the Minutemen struck down, the US closes one more front."
+worldnews.257.f:0 "The Minutemen in Altanta will have some interesting dicussions with American military police."
 
 # City falls from the Siamese files
 
