Fix up the existing city capture events

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -580,15 +580,15 @@ worldnews.261.b:0 "We only claim to secure our hegemony in the East Indies from 
 worldnews.261.c:0 "Retreat to the jungles, we will not let the Philippines fall!"
 
 worldnews.262.t:0 "The Fall of Calcutta" #Siam
-worldnews.262.d:0 "After a period of heavy bombardment, it has now been confirmed that the city of Calcutta in the Bharatiya Commune has fallen to advancing [SIA.GetAdjective] forces. Following heavy fighting across Chowringhee avenue, silence once again fell across the city as the sounds of gunfire and artillery muted.\n\nClaims arise of [SIA.GetAdjective] troops patrolling the streets to maintain order in the populous Indian city as unverified claims of mass arrests and atrocities slowly trickle down to Asian newspapers. With the fall of Calcutta, many predict that all of Bharatiya Commune will soon follow."
+worldnews.262.d:0 "After a period of heavy bombardment, it has now been confirmed that the city of Calcutta in Bengal has fallen to advancing [SIA.GetAdjective] forces. Following heavy fighting across Chowringhee avenue, silence once again fell across the city as the sounds of gunfire and artillery muted.\n\nClaims arise of [SIA.GetAdjective] troops patrolling the streets to maintain order in the populous Indian city as unverified claims of mass arrests and atrocities slowly trickle down to Asian newspapers. With the fall of Calcutta, many predict that all of India will inevitably follow."
 worldnews.262.a:0 "Calcutta, regional capital of Bengal, was clearly the last gate to India Proper."
 worldnews.262.b:0 "The people of Bengal and Assam have too long suffered under Indian rule."
 worldnews.262.c:0 "We have been bled but not defeated. Workers, resist the royalist oppressors!"
-worldnews.262.e:0 "Siam has no business in India. Should Bharatiya fall, we must intervene."
+worldnews.262.e:0 "Siam has no business in India. Should they fail to stop them, we must intervene."
 worldnews.262.f:0 "This is extremely concerning. Siam has no business in India, the old British Crown Jewel."
 
 worldnews.263.t:0 "The Fall of New Delhi" #Siam
-worldnews.263.d:0 "[SIA.GetAdjective] offensives continue in the Dominion of India, and the fall of New Delhi recently took place. As the capital of the Dominion of India, this city is of immense strategic importance and its loss may prove to be a decisive factor in the ongoing Indian campaign.\n\nThe Viceroy himself was reportedly captured by [SIA.GetAdjective] forward units while he was supervising the transfer of his belongings from the Viceroy's House to a truck caravan, but this has not yet been confirmed."
+worldnews.263.d:0 "[SIA.GetAdjective] offensives continue across the Indian subcontinent, and the fall of New Delhi recently crowned this campaign. As the capital of a potential united India, this city is of immense strategic importance and its loss may prove to be a decisive factor in the ongoing Indian campaign.\n\nThe Viceroy himself was reportedly captured by [SIA.GetAdjective] forward units while he was supervising the transfer of his belongings from the Viceroy's House to a truck caravan, but this has not yet been confirmed."
 worldnews.263.a:0 "New Delhi still was the capital of a divided India. And thus it falls."
 worldnews.263.b:0 "With New Delhi in our hands, we promise the Indian people freedom from Western influence."
 worldnews.263.c:0 "This is an absolute disaster, we must consult with our Entente allies, now!"
