Some localization work

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -778,7 +778,7 @@ fengtian.new.83.a:0 "Good"
 fengtian.new.84.t:0 "Delays in Doihara's Plans"
 fengtian.new.84.d:0 "INSERT"
 fengtian.new.84.a:0 "Unfortunate"
-fengtian.new.94.b:0 "We've had enough"
+fengtian.new.84.b:0 "We've had enough"
 
 fengtian.new.85.t:0 "Further Delays"
 fengtian.new.85.d:0 "INSERT"
@@ -793,90 +793,91 @@ fengtian.new.87.t:0 "Discovery and Failure"
 fengtian.new.87.d:0 "INSERT"
 fengtian.new.87.a:0 "Damn!"
 
-fengtian.new.88.t:0 "Doihara's Fate"
-fengtian.new.88.d:0 "INSERT"
-fengtian.new.88.a:0 "So be it"
+fengtian.new.88.t:0 "HIDDEN EVENT"
+fengtian.new.88.d:0 "HIDDEN EVENT"
+fengtian.new.88.a:0 "HIDDEN EVENT"
 
-fengtian.new.89.t:0 "Opium Addiction Spreads in Qing"
+fengtian.new.89.t:0 "Doihara's Fate"
 fengtian.new.89.d:0 "INSERT"
-fengtian.new.89.a:0 "Unfortunate but necessary"
+fengtian.new.89.a:0 "So be it"
 
-fengtian.new.90.t:0 "The Propaganda War"
+fengtian.new.90.t:0 "Opium Addiction Spreads in Qing"
 fengtian.new.90.d:0 "INSERT"
-fengtian.new.90.d_mantetsu:0 "INSERT"
-fengtian.new.90.a:0 "Southern reclamation is inevitable!"
+fengtian.new.90.a:0 "Unfortunate but necessary"
 
-fengtian.new.91.t:0 ""
-fengtian.new.91.d:0 ""
-fengtian.new.91.a:0 ""
+fengtian.new.91.t:0 "Escalating the Propaganda War"
+fengtian.new.91.d:0 "INSERT"
+fengtian.new.91.d_mantetsu:0 "INSERT"
+fengtian.new.91.a:0 "Southern reclamation is inevitable!"
 
-fengtian.new.92.t:0 ""
-fengtian.new.92.d:0 ""
-fengtian.new.92.a:0 ""
+fengtian.new.92.t:0 "Artillery from Kokura"
+fengtian.new.92.d:0 "In accordance with our recent orders, several shipments of Japanese artillery arrived in Yingkou earlier today, with more to come in the future."
+fengtian.new.92.a:0 "Good"
 
-fengtian.new.93.t:0 ""
-fengtian.new.93.d:0 ""
-fengtian.new.93.a:0 ""
+fengtian.new.93.t:0 "Artillery from Kokura"
+fengtian.new.93.d:0 "As part of our agreement with Japan, several more shipments of artillery from the Kokura Arsenal arrived earlier today, with more to come in the future."
+fengtian.new.93.a:0 "Good"
 
-fengtian.new.94.t:0 ""
-fengtian.new.94.d:0 ""
-fengtian.new.94.a:0 ""
+fengtian.new.94.t:0 "Advanced artillery from Kokura"
+fengtian.new.94.d:0 "In accordance with our orders, several shipments of more advanced Japanese artillery arrived in Yingkou earlier today. As the agreement has been fulfilled, this is the final shipment."
+fengtian.new.94.a:0 "Good"
 
-fengtian.new.95.t:0 ""
-fengtian.new.95.d:0 ""
-fengtian.new.95.a:0 ""
+fengtian.new.95.t:0 "Rifles from Japan"
+fengtian.new.95.d:0 "As part of our recent agreement with Japan, several shipments of rifles from the Kokura Arsenal arrived earlier today, with more to come in the future."
+fengtian.new.95.a:0 "Good"
 
-fengtian.new.96.t:0 ""
-fengtian.new.96.d:0 ""
-fengtian.new.96.a:0 ""
+fengtian.new.96.t:0 "Rifles from Japan"
+fengtian.new.96.d:0 "In accordance with our orders, several more shipments of Japanese rifles arrived in Yingkou earlier today, with more to come in the future."
+fengtian.new.96.a:0 "Good"
 
-fengtian.new.97.t:0 ""
-fengtian.new.97.d:0 ""
-fengtian.new.97.a:0 ""
+fengtian.new.97.t:0 "Advanced Rifles from Japan"
+fengtian.new.97.d:0 "In accordance with our orders, several shipments of newer Japanese rifles arrived in Yingkou earlier today. As the agreement has been fulfilled, this is the final shipment."
+fengtian.new.97.a:0 "Good"
 
-fengtian.new.98.t:0 ""
-fengtian.new.98.d:0 ""
-fengtian.new.98.a:0 ""
+fengtian.new.98.t:0 "Light Tanks from Japan"
+fengtian.new.98.d:0 "As part of our recent contract with the Mitsubishi Zaibatsu, several shipments of Ha-Go light tanks arrived earlier today, with more to come in the future."
+fengtian.new.98.a:0 "Good"
 
-fengtian.new.99.t:0 ""
-fengtian.new.99.d:0 ""
-fengtian.new.99.a:0 ""
+fengtian.new.99.t:0 "Light Tanks from Japan"
+fengtian.new.99.d:0 "As part of our contract with the Mitsubishi Zaibatsu, several shipments of light tanks arrived earlier today, with more to come in the future."
+fengtian.new.99.a:0 "Good"
 
-fengtian.new.100.t:0 ""
-fengtian.new.100.d:0 ""
-fengtian.new.100.a:0 ""
+fengtian.new.100.t:0 "Light Tanks from Japan"
+fengtian.new.100.d:0 "In accordance with our contract, several more shipments of light tanks arrived in Yingkou earlier today. As the terms of the contract are now complete, this is the final shipment."
+fengtian.new.100.a:0 "Good"
 
-fengtian.new.102.t:0 ""
-fengtian.new.102.d:0 ""
-fengtian.new.102.a:0 ""
+fengtian.new.101.t:0 "The Grand Marshal's Proclamation"
+fengtian.new.101.d:0 "INSERT"
+fengtian.new.101.a:0 "Wansui!"
 
-fengtian.new.103.t:0 ""
-fengtian.new.103.d:0 ""
-fengtian.new.103.a:0 ""
+fengtian.new.102.t:0 "Unfulfilled Promises"
+fengtian.new.102.d:0 "INSERT"
+fengtian.new.102.a:0 "Promises are best kept"
 
-fengtian.new.104.t:0 ""
-fengtian.new.104.d:0 ""
-fengtian.new.104.a:0 ""
+fengtian.new.103.t:0 "Shanhaiguan Infiltration"
+fengtian.new.103.d:0 "INSERT"
+fengtian.new.103.a:0 "Best of luck to our brave soldiers!"
+fengtian.new.103.b:0 "Forget it"
 
-fengtian.new.105.t:0 ""
-fengtian.new.105.d:0 ""
-fengtian.new.105.a:0 ""
+fengtian.new.104.t:0 "Preparations Complete at Shanhaiguan"
+fengtian.new.104.d:0 "INSERT"
+fengtian.new.104.a:0 "Good news"
 
-fengtian.new.106.t:0 ""
-fengtian.new.106.d:0 ""
-fengtian.new.106.a:0 ""
+fengtian.new.105.t:0 "Failure at Shanhaiguan"
+fengtian.new.105.d:0 "INSERT"
+fengtian.new.105.a:0 "A brave sacrifice"
 
-fengtian.new.107.t:0 ""
-fengtian.new.107.d:0 ""
-fengtian.new.107.a:0 ""
+fengtian.new.106.t:0 "Infiltrators Disappear"
+fengtian.new.106.d:0 "INSERT"
+fengtian.new.106.a:0 "There is still hope"
 
-fengtian.new.108.t:0 ""
-fengtian.new.108.d:0 ""
-fengtian.new.108.a:0 ""
+fengtian.new.107.t:0 "Success at Shanhaiguan"
+fengtian.new.107.d:0 "INSERT"
+fengtian.new.107.a:0 "Great news!"
 
-fengtian.new.109.t:0 ""
-fengtian.new.109.d:0 ""
-fengtian.new.109.a:0 ""
+fengtian.new.108.t:0 "An Unexpected Advantage"
+fengtian.new.108.d:0 "INSERT"
+fengtian.new.108.a:0 "Glorious!"
 
 
 ### Informal Empire Mechanic ###
