Fix loc for Washington falling

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -511,7 +511,7 @@ worldnews.252.e:0 "This is a great relief. The Great Lakes, and America, will so
 worldnews.252.f:0 "The workers of Chicago will soon meet head to head with American military police."
 
 worldnews.253.t:0 "The Fall of Washington" #CSA
-worldnews.253.d:0 "Syndicate forces have advanced towards and captured the symbolic capital of the United States, Washington D.C.\n\n. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of the Syndicate States of America now flies over the U.S. Capitol.\n\nUnconfirmed sources claim that governmental figures have been evacuated during the battle, their whereabouts are unknown."
+worldnews.253.d:0 "Syndicate forces have advanced towards and captured the symbolic capital of the United States, Washington D.C.\n\nThey stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of the Syndicate States of America now flies over the U.S. Capitol.\n\nUnconfirmed sources claim that governmental figures have been evacuated during the battle, their whereabouts are unknown."
 worldnews.253.a:0 "This is a disaster, but we are not defeated yet!"
 worldnews.253.b:0 "The central government has been thrown off its golden throne. Now we deal with the remnants."
 worldnews.253.c:0 "The Syndicalist traitors made it to Washington D.C. first. We need to take it back!"
@@ -527,7 +527,7 @@ worldnews.254.e:0 "At least the neighbouring Syndicalist threat has been elimina
 worldnews.254.f:0 "The workers of Chicago will soon attend the Minutemen firing squads."
 
 worldnews.255.t:0 "The Fall of Washington" #CSA
-worldnews.255.d:0 "Minutemen militias have advanced towards and captured the symbolic capital of the United States, Washington D.C.\n\n. They stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of the American Union States now flies over the U.S. Capitol.\n\nUnconfirmed sources claim that governmental figures have been evacuated during the battle, their whereabouts are unknown."
+worldnews.255.d:0 "Minutemen militias have advanced towards and captured the symbolic capital of the United States, Washington D.C.\n\nThey stormed the Capitol building and met strong resistance but eventually, they broke through and the flag of the American Union States now flies over the U.S. Capitol.\n\nUnconfirmed sources claim that governmental figures have been evacuated during the battle, their whereabouts are unknown."
 worldnews.255.a:0 "This is a disaster, but we are not defeated yet!"
 worldnews.255.b:0 "Washington D.C. is now in our hands! We will do the Founding Fathers proud."
 worldnews.255.c:0 "The reactionary Minutemen made it to Washington D.C. first. We need to take it back!"
