Answer too long

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -548,7 +548,7 @@ worldnews.257.a:0 "You will never defeat the Minutemen of the Founding Fathers!"
 worldnews.257.b:0 "We are on your tail, Long. You will be tried for your crimes, you and your militia!"
 worldnews.257.c:0 "With such a victory on the Reactionary traitors, the federal troops will soon be upon us."
 worldnews.257.e:0 "With Long and the Minutemen struck down, the US closes one more front."
-worldnews.257.f:0 "The Minutemen in Altanta will have some interesting dicussions with American military police."
+worldnews.257.f:0 "The Minutemen will have some interesting dicussions with American military police."
 
 # City falls from the Siamese files
 
