--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -19,7 +19,7 @@ SAF_social_liberal_party_long:0 "Liberal Party of South Africa"
 SAF_market_liberal_party_long:0 "Progressive Party"
 SAF_social_conservative_party_long:0 "Conservative Party"
 SAF_authoritarian_democrat_party_long:0 "National Party"
-SAF_paternal_autocrat_party_long:0 "Afrikaans Gesuiwerde Nasionale Party"
+SAF_paternal_autocrat_party_long:0 "Gesuiwerde Nasionale Party"
 SAF_national_populist_party_long:0 "Afrikaner Bond"
 
 ### Pre-CW Political Focus ###
