--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -563,6 +563,8 @@ HOL_destroyer_4:0 "Piet Hein Class"
 HOL_destroyer_4_desc:0 "The Piet Hein class consisted of three British S-class destroyers transferred to the Royal Dutch Navy shortly after the war. The ships displaced over 1,800 tons, were armed with four 120mm/45 QF Mk IX guns, and had a wide array of ASW armaments."
 
 ### Light Cruisers ###
+HOL_light_cruiser_pre:0 "Soemba Class"
+HOL_light_cruiser_pre_desc:0 "Placeholder."
 HOL_light_cruiser_1:0 "Java Class"
 HOL_light_cruiser_1_desc:0 "The Dutch commissioned two Java-class light cruisers in the mid-1920s. The ships were designed in Germany but constructed in the Netherlands. They displaced nearly 6,700 tons and had a main armament of ten 150mm Bofors guns. They were lightly armored and had decent speed for their vintage."
 HOL_light_cruiser_2:0 "De Ruyter Class"
@@ -585,10 +587,12 @@ HOL_heavy_cruiser_4:0 "Somerset Class"
 HOL_heavy_cruiser_4_desc:0 "Placeholder."
 
 ### Battle Cruisers ###
-HOL_battle_cruiser_1:0 "Revolution Class"
-HOL_battle_cruiser_1_desc:0 "The Revolution-Class, also called the Renown Class, were originally laid down as improved versions of the Revenge-class battleships. Their construction was suspended at the outbreak of WKI. Following the revolution, the new Republican Navy managed to restart their construction as battle cruisers. These ships were the quintessential battle cruiser. They were well-armed, fast, and maneuverable, but had thinner armour and a shorter operational range."
-HOL_battle_cruiser_2:0 "Invincible Class"
-HOL_battle_cruiser_2_desc:0 "The Invincible were a class of battle cruisers that were a faster and cheaper version of the Blake-class battleships. These vessels carried a similar but reduced armament for both surface and anti-air combat: two triple 14 in. cannons and six twin 5.25 in. AA guns. Their fast speed and long range would provide the Republican Navy quick strike capabilities and convoy protection, but their limited armour would prove problematic if they had to fight modern battleships."
+HOL_battle_cruiser_pre:0 "Hollandia Class"
+HOL_battle_cruiser_pre_desc:0 "Placeholder"
+HOL_battle_cruiser_1:0 "Van Speijk Class"
+HOL_battle_cruiser_1_desc:0 "Placeholder."
+HOL_battle_cruiser_2:0 "Witte de With Class"
+HOL_battle_cruiser_2_desc:0 "Placeholder."
 
 ### Battleships ###
 HOL_battleship_pre:1 "Evertsen class"
