U-boat proponent fix

--- a/localisation/KR_Traits_l_english.yml
+++ b/localisation/KR_Traits_l_english.yml
@@ -59,7 +59,7 @@ eco_carrier_proponent:0 "Carrier Proponent"
 eco_infantry_proponent:0 "Infantry Proponent"
 eco_naval_aviation_proponent:0 "Naval Aviation Proponent"
 eco_strategic_destruction_proponent:0 "Strategic Air Proponent"
-eco_submarine_proponent:0 "U-Boat Proponent"
+eco_u_boat_proponent:0 "U-Boat Proponent"
 eco_tank_proponent:0 "Tank Proponent"
 
 eco_army_reform_committee:0 "Army Reform Committee"
