Turns out 1919-1921 was make pretend

--- a/localisation/KR_General_l_english.yml
+++ b/localisation/KR_General_l_english.yml
@@ -553,7 +553,7 @@ generic_equipment_effort_desc:0 "For a long time, military breakthroughs were sl
 generic_motorization_effort:0 "Army Motorisation"
 generic_motorization_effort_desc:0 "The cavalry charges of the Weltkrieg were probably the last. The truck is no longer just a transport tool and rapidly integrates to mobile warfare tactics. We must shake off outdated thinking and use motorisation to speed up our offensives and reinforcements."
 generic_doctrine_effort:0 "Studying the Weltkrieg"
-generic_doctrine_effort_desc:0 "We know about the Weltkrieg, but what have we learned from it? In just seven years of conflict, countless soldiers died to teach us the new dynamics of warfare. If we do not learn about them, then our soldiers will meet the same fate on the battlefield."
+generic_doctrine_effort_desc:0 "We know about the Weltkrieg, but what have we learned from it? In just five years of conflict, countless soldiers died to teach us the new dynamics of warfare. If we do not learn about them, then our soldiers will meet the same fate on the battlefield."
 generic_equipment_effort_2:0 "Equipment Research"
 generic_equipment_effort_2_desc:0 "We might have caught up to modern equipment, but new designs are already making ours obsolete. Regardless, we must persevere, and make sure that we never fall a single year behind in equipment. This means we will have to start developing our own designs."
 generic_mechanization_effort:0 "Mechanised Warfare"
