Bugfixes and capitulation of germany now possible with the kaiserbund

--- a/localisation/KR_Capitulations_l_english.yml
+++ b/localisation/KR_Capitulations_l_english.yml
@@ -15,7 +15,8 @@ capt.2.d:0 "The German Empire, having nowhere to run, chose to submit before our
 capt.2.a:0 "We are victorious!"
 
 capt.3.t:0 "The German Capitulation"
-capt.3.d:0 "The Kaiser has decreed that Göring is to step down as Statthalter of Mittelafrika. Mittelafrika is to be absorbed back into Germany."
+capt.3.d_MAF:0 "The Kaiser has decreed that Göring is to step down as Statthalter of Mittelafrika. Mittelafrika is to be absorbed back into Germany."
+capt.3.d_TNZ:0 "The Kaiser has decreed that we have to step down as Statthalter of Tanzania. Tanzania is to be absorbed back into Germany with its neighbour countries."
 capt.3.a:0 "Lapdogs no longer! Declare the independence of the Mittelafrikan Empire!"
 capt.3.b:0 "Welcome the exiled government and give in to their demands."
 
@@ -43,4 +44,4 @@ capt.7.e:0 "Austria is the only German power." #Austria
 capt.7.f:0 "The humiliation of Brest-Litovsk has been reversed!" #Russia
 capt.7.g:0 "The workers did what the Tsar could not!" #Soviets
 capt.7.h:0 "Germany finally paid for the devastation of the Weltkrieg." #Canada
-capt.7.i:0 "-" #have to find a line for Nat France
+capt.7.i:0 "The massacres of the Weltkrieg has been avenged" #Nat France
