added POR revolution chain for CNT

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -560,6 +560,67 @@ sprc.238.a:0 "Alas!"
 sprc.238.b:0 "They have gone too far - to war!"
 sprc.238.c:0 "We will not push this further"
 
+sprc.240.t:0 "The Anarchist Riots"
+sprc.240.d:0 "Inspired by the success of the FAI in the Spanish Revolution and its swelling membership, our local anarcho-syndicalist group, the União Anarquista Portuguesa, has been causing strikes and protests across the nation. Today, a major strike and protest took place on the streets of Lisbon, which soon turned violent. Rumors say the anarchists are plotting to coup the government!"
+sprc.240.a:0 "Declare the UAP illegal and wrest control of the streets"
+sprc.240.b:0 "The UAP succedes in their coup!"
+
+sprc.241.t:0 "Anarchist Coup!"
+sprc.241.d:0 "The União Anarquista Portuguesa has succeded on their coup against the [Root.GetAdjective] government. A true regime of all workers has been established!"
+sprc.241.a:0 "The UAP establishes a new Portuguese Republic"
+sprc.241.b:0 "Propose integration into [CNT.GetNameDef]"
+
+sprc.242.t:0 "Revolution in Portugal"
+sprc.242.d:0 "The Uniao Anarquista Portuguesa has succeded on their coup against the dictatorship in Portugal. With help from the CNT-FAI, a true government of all workers has been established!"
+sprc.242.a:0 "We welcome our Portuguese brothers"
+
+sprc.243.t:0 "Revolution in Portugal"
+sprc.243.d:0 "The União Anarquista Portuguesa has succeded on their coup against the dictatorship in Portugal. With help from the CNT-FAI, a true government of all workers has been established! The UAP has now proposed a complete integration of Portugal into our Federation."
+sprc.243.a:0 "Accept their offer - Integrate the Portuguese nation"
+sprc.243.b:0 "Rather not - Maybe an alliance instead?"
+
+sprc.244.t:0 "Anarchist Coup in Portugal!"
+sprc.244.d:0 "After days of riots in the capital city of Lisbon, a surprise coup against the Portuguese government led by the União Anarquista Portuguesa, an anarcho-syndicalist movement believed to be inspired by the recent success of the CNT-FAI in Spain - if not outright funded by them - was successful in taking over the government. Anarchist militia moved into the capital buildings, and an interim regime under revolutionary leaders Neno Vasco and António Pinto Quartin has been set up. It is expected that the new leaders will seek much closer ties with [CNT.GetNameDef] in the days to come."
+sprc.244.a:0 "Long live the revolution!"
+sprc.244.b:0 "We welcome our socialist brothers in Portugal"
+sprc.244.c:0 "I see..."
+
+sprc.245.t:0 "Suppression of the UAP"
+sprc.245.d:0 "An emergency CNT-FAI meeting has been called to discuss the problem in Portugal. With the increased violent action from the UAP, the Portuguese government has decided to crack down on the organization. With the fear and anger of its members, the UAP is calling for action."
+sprc.245.a:0 "Invade Portugal! Viva la Revolución!"
+sprc.245.b:0 "Let the UAP take care of this alone"
+
+sprc.246.t:0 "Unrest in Africa"
+sprc.246.d:0 "As news of the annexation of Portugal has reached their former colonies in Africa, colonial administrators and border guards are now attempting to seize control of the local governments before socialist-sympathizing units and militias disarm them, and set up a government-in-exile!"
+sprc.246.a:0 "So it seems..."
+
+sprc.247.t:0 "Portugal is Weak"
+sprc.247.d:0 "[POR.GetNameDef] is under attack by [CNT.GetNameDef]. Their colonies here in Afrika are weak and underprotected - should we grab Angola now before it falls into [CNT.GetAdjective] hands?"
+sprc.247.a:0 "We must get it!"
+sprc.247.b:0 "No, leave it alone"
+sprc.248.t:0 "[From.GetNameDef] Seizes Angola!"
+sprc.248.d:0 "[From.GetNameDef] has taken advantage of the current chaos and sent its troops into Angola!"
+sprc.248.a:0 "Curse them!"
+
+sprc.249.t:0 "Portugal is Weak"
+sprc.249.d:0 "[POR.GetNameDef] is under attack by [CNT.GetNameDef]. Their colonies here in Afrika are weak and underprotected - should we grab Mozambique now before it falls into [CNT.GetAdjective] hands?"
+sprc.250.t:0 "[From.GetNameDef] Seizes Mozambique!"
+sprc.250.d:0 "[From.GetNameDef] has taken advantage of the current chaos and sent its troops into Mozambique!"
+
+sprc.251.t:0 "Fate of Macao"
+sprc.251.d:0 "The collapse of Portugal has allowed Macao to be open for occupation!"
+sprc.251.a:0 "Welcome them"
+sprc.251.b:0 "No, we don't want this kind of trouble"
+sprc.252.t:0 "Fate of Macao"
+sprc.252.d:0 "The chaos caused by the collapse of [POR.GetNameDef] has allowed Macao to be occupied by [From.GetNameDef]!"
+sprc.252.a:0 "There is nothing we can do"
+
+sprc.253.t:0 "Fate of East Timor"
+sprc.253.d:0 "The collapse of Portugal has allowed East Timor to be open for occupation!"
+sprc.254.t:0 "Fate of East Timor"
+sprc.254.d:0 "The chaos caused by the collapse of [POR.GetNameDef] has allowed East Timor to be occupied by [From.GetNameDef]!"
+sprc.254.a:0 "There is nothing we can do"
+
 ### Carlists ###
 
 sprc.301.t:0 "Carlist Uprising"
