Rebalance some of the South African focuses

--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -82,8 +82,8 @@ SAF_detente_desc:0 "In an effort to bring our economy back from the crash brough
 SAF_new_docks:0 "Entente Harbour Investments"
 SAF_new_docks_desc:0 "Ever since we improved relations with the Entente, British and French capital has poured into our country, with private firms taking the initiative and investing in new docks in Durban and Port Elizabeth and miles of train track across the Cape to ease congestion at Capetown."
 
-SAF_kimberly_mines:0 "Kimberly Mines"
-SAF_kimberly_mines_desc:0 "The influx of capital from the Entente continues to grow our economy. New mines have opened in Kimberly, but some members of the Gesuiwerde and even our own party have spoken out against the clear focus on British dominated parts of the country."
+SAF_Kimberley_mines:0 "Kimberley Mines"
+SAF_Kimberley_mines_desc:0 "The influx of capital from the Entente continues to grow our economy. New mines have opened in Kimberley, but some members of the Gesuiwerde and even our own party have spoken out against the clear focus on British dominated parts of the country."
 
 SAF_complete_detente:0 "The British Recovery"
 SAF_complete_detente_desc:0 "We have finally solved our economic crisis and solidified our status as the most industrialised nation in Africa! However, the former Boer Republics seem to have been left behind. Unemployment there is still a problem, as most of the jobs created have been in the Cape, and those have gone to Coloured or Native workers."
