--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -518,12 +518,14 @@ gerdom.76.t:0 "Status of Somaliland"
 gerdom.76.d:0 "With our decision to implement Kaiserbund project we still have to decide extent of its implementation on various fringe regions under our control. One such region is the German Somaliland. While admirals of Kaiserliche Marine are arguing for keeping this territory under our direct control as a way to keep Gulf of Aden under our control, the most of politicians would rather cut down our expenses with administration of this territory even at cost of diminishing our presence in this area."
 
 gerdom.77.t:0 "The Re-organisation of Mittelafrika"
-gerdom.77.d:0 "In accordance with decision made by Berlin, we have reorganised our internal structure..."
-gerdom.77.a:0 "A new order for Africa"
+gerdom.77.d:0 "We will have to reorganise our internal structure in accordance with the new orders from Germany..."
+gerdom.77.a:0 "A new order for Africa!"
+gerdom.77.b:0 "Oh, I don't think so."
 
 gerdom.78.t:0 "The Re-organisation of Mittelafrika"
-gerdom.78.d:0 "In accordance with decision made by Berlin, we have reorganised our internal structure..."
-gerdom.78.a:0 "A new order for Africa"
+gerdom.78.d:0 "We will have to reorganise our internal structure in accordance with the new orders from Germany..."
+gerdom.78.a:0 "A new order for Africa!"
+gerdom.78.b:0 "Oh, I don't think so."
 
 gerdom.79.t:0 "The Re-organisation of the AlgOstAsien GmbH"
 gerdom.79.d:0 "With our decision to implement Kaiserbund project we still have to decide extent of its implementation on various strategical territories under our administration. One such territory is the Southern China, currently administered by AOG. While conservative members of Reichstag are arguing for keeping it as it is, majority of politicians have already realised that administrative an economical model represented by AOG is no longer effective and keeping it intact will result in massive dissent of Chinese population, which our armed forces will not be able to contain."
