--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -30,7 +30,7 @@ POL_assembly_lines_idea:0 "Contemporary Assembly Lines"
 POL_assembly_lines_idea_desc:0 "Assembly lines increase our factory efficiency."
 POL_air_radios_idea:0 "Personal Pilot Radios"
 POL_air_radios_idea_desc:0 "Allowing our pilots to communicate with one another improves their ability to perform complex manoeuvres."
-POL_euro_block_idea:0 "Joining The European Economic Bloc"
+POL_euro_block_idea:0 "The European Economic Bloc"
 POL_euro_block_idea_desc:0 "Joining Germany's economic bloc serves to strengthen the Polish economy."
 POL_an_absolute_monarch_idea:0 "An Absolute Monarch"
 POL_an_absolute_monarch_idea_desc:0 "All authority rests in the hands of the monarch."
@@ -98,7 +98,7 @@ POL_lithuanian_shipbuilding:0 "Lithuanian Shipbuilding"
 POL_new_trade_opportunities:0 "New Naval Officers"
 POL_join_mitteleuropa:0 "Join Mitteleuropa"
 POL_german_advisors:0 "Invite German Advisers"
-POL_join_economic_bloc:0 "The European Economic Bloc"
+POL_join_economic_bloc:0 "Joining The European Economic Bloc"
 POL_german_tech_sharing:0 "The Kaiser Wilhelm Society"
 POL_the_entente:0 "The Entente"
 POL_russian_support:0 "Look to Russia"
